# MLB538

./: .gitattributes  .gitignore  LICENSE  README.md  config.yaml  experiments.yaml  pyproject.toml
chatbot/: building_mlb_agent.ipynb
chatbot/adk-agents/: .env
chatbot/adk-agents/agent1_mlb_get_game/: agent.py  tools.py
chatbot/adk-agents/agent_mlb_predictor/: .env  agent.py  requirements.txt  tools.py
docs/: DATA.md  DEPLOY_GCP.md  MODEL_TRAINING.md  PRESENTATION.md  SYNOPSIS.md
mlb_forecaster/: __init__.py  cli.py  config.py  experiments.py  pipeline.py
mlb_forecaster/api/: __init__.py  client.py  games.py  schedule.py  teams.py
mlb_forecaster/backtest/: __init__.py  evaluate.py
mlb_forecaster/data/: __init__.py  gcs.py  models.py  store.py
mlb_forecaster/elo/: __init__.py  engine.py  fit.py  mov.py  params.py  pitchers.py  preseason.py  team.py
mlb_forecaster/forecast/: __init__.py  odds.py  playoffs.py  simulate.py
mlb_forecaster/ml/: __init__.py  calibrate.py  features.py  margin.py  predict.py  registry.py  train.py
mlb_forecaster/selfcorrect/: __init__.py  update.py
mlb_forecaster/service/: __init__.py  api.py  core.py  jobs.py  mcp_server.py
notebooks/: explore.ipynb
scripts/: daily_update.sh
tests/: test_elo.py  test_features.py  test_margin.py  test_mov.py  test_pitchers.py  test_simulate.py
